<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.GameActivity"
    android:id="@+id/game_activity">


    <Button
        android:id="@+id/roll_dice_btn"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/roll_dice_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_Spinner"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/end_turn_btn"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/end_turn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_Spinner"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/dice_button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:background="@mipmap/white5"
        android:contentDescription="@string/die_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_Button_2" />

    <ImageButton
        android:id="@+id/dice_button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:background="@mipmap/white5"
        android:contentDescription="@string/die_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dice_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@mipmap/white5"
        android:contentDescription="@string/die_2"
        app:layout_constraintEnd_toStartOf="@+id/dice_Button_2"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/dice_button_0"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dice_button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@mipmap/white5"
        android:contentDescription="@string/die_5"
        app:layout_constraintEnd_toStartOf="@+id/dice_button_5"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/dice_button_3"
        app:layout_constraintTop_toBottomOf="@+id/dice_button_1" />

    <ImageButton
        android:id="@+id/dice_button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@mipmap/white5"
        android:contentDescription="@string/die_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_button_0" />

    <TextView
        android:id="@+id/dice_lock_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/help_text"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_button_4" />

    <ImageButton
        android:id="@+id/dice_Button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="44dp"
        android:background="@mipmap/white5"
        android:contentDescription="@string/die_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/score_Spinner"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginBottom="176dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/score_mode_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/score_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_Spinner" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/turn_counter"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/turn_temp_string"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/throw_counter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="44dp"
            android:layout_weight="1"
            android:text="@string/turn_temp_string"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>