<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ResultActivity">

    <LinearLayout
        android:layout_width="289dp"
        android:layout_height="360dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_score_value">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="291dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="356dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="407dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="462dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="515dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="636dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="589dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="243dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="187dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/turn_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_temp_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="143dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>
    </LinearLayout>

    <TextView
        android:id="@+id/game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/game_over"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/final_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/final_score"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_over" />

    <TextView
        android:id="@+id/final_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_temp_string"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_score_text" />

</androidx.constraintlayout.widget.ConstraintLayout>